--- a/index.html
+++ b/index.html
@@ -211,14 +211,14 @@
                             <tbody>
                                 <tr>
                                     <td>203A</td>
-                                    <td>Johny Stardust (<a href="./jQuery-novice-to-ninja/images/johnny_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Johny Stardust (<a href="images/johnny_400.jpg" class="lightbox">pic</a>)</td>
                                     <td>Front-man</td>
                                     <td>Los Angeles</td>
                                     <td>$39.95</td>
                                 </tr>
                                 <tr>
                                     <td>141B</td>
-                                    <td>Beau Dandy (<a href="./jQuery-novice-to-ninja/images/beau_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Beau Dandy (<a href="images/beau_400.jpg" class="lightbox">pic</a>)</td>
                                     <td>Singer</td>
                                     <td>New York</td>
                                     <td>$39.95</td>
@@ -232,14 +232,14 @@
                                 </tr>
                                 <tr>
                                     <td>007F</td>
-                                    <td>Kellie Kelly (<a href="./jQuery-novice-to-ninja/images/kellie_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Kellie Kelly (<a href="images/kellie_400.jpg" class="lightbox">pic</a>)</td>
                                     <td>Singer</td>
                                     <td>Omaha</td>
                                     <td>$11.95</td>
                                 </tr>
                                 <tr>
                                     <td>8A05</td>
-                                    <td>Darth Fader (<a href="./jQuery-novice-to-ninja/images/fader_400.jpg" class="lightbox">pic</a>)</td>
+                                    <td>Darth Fader (<a href="/images/fader_400.jpg" class="lightbox">pic</a>)</td>
                                     <td>DJ</td>
                                     <td>London</td>
                                     <td>$19.95</td>
