--- a/index.html
+++ b/index.html
@@ -72,6 +72,15 @@
         
 		<!--Add conditional Javascript-->
 
+		<script src="jquery-1.12.0.min.js"></script>
+		<script src="jquery-1.7.1.min.js"></script>
+		<script src="jquery-ui-1.8.17.custom.min.js"></script>
+		<script src="jquery.color.js"></script>
+		
+		<script src="validate.js"></script>
+		<script src="webpack.common.js"></script>
+		<script src=”jquery-ui-1.8.17.custom.min.js”></script>
+		<script src=”jquery.color.js”></script>
 		<script src=”jquery-1.12.0.min.js”></script>
 		<script src=”jquery-1.7.1.min.js”></script>
 		<script src=”jquery-ui-1.8.17.custom.min.js”></script>
