--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -1111,7 +1111,7 @@
                     </p>
                     </div>
                 </div>
-            </div><!-- end container -->
+            </div><!-- end container, pg -->
         
                 <footer class="data" id="html5style2footer"> 
                     <div class="footer-inner">        
@@ -1237,6 +1237,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
