--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -48,7 +48,7 @@
         }
 
         /* Styling for the full-page container */
-        .container-full-page {
+        #container-full-page {
             width: 100vw; /* Viewport width */
             height: 100vh; /* Viewport height */
             background-color: #f0f0f0; /* Example background color */
@@ -76,7 +76,7 @@
     </head>
 	<body>
         <div class="wrapper">
-			<div class="data" id="container">
+			<div class="data" id="container-full-page">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -1237,6 +1237,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
