--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -49,8 +49,8 @@
 
         /* Styling for the full-page container */
         #container-full-page {
-            width: 100vw; /* Viewport width */
-            height: 100vh; /* Viewport height */
+           /*  width: 100vw; Viewport width */
+         /*    height: 100vh; Viewport height */
             background-color: #f0f0f0; /* Example background color */
             display: flex; /* Example: Use flexbox for content alignment */
             justify-content: center;
@@ -1229,6 +1229,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
