--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -2,7 +2,7 @@
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <title>Creating-a-Website</title>
-		<meta charset=utf-8>
+		<meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta http-equiv="REFRESH" content="500">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
@@ -1229,6 +1229,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
