--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -40,7 +40,7 @@
         <!-- Plugin CSS -->
         <link href="vendor/magnific-popup/magnific-popup.css" rel="stylesheet">
 		<style>
-        /* Basic reset to remove default browser margins */
+        /* Basic reset to remove default browser margins *
         body {
             margin: 0;
             padding: 0;
@@ -1229,6 +1229,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
