--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -48,7 +48,7 @@
         }
 
         /* Styling for the full-page container */
-        #container-full-page {
+        #container {
            /*  width: 100vw; Viewport width */
          /*    height: 100vh; Viewport height *
             background-color: #f0f0f0; /* Example background color */
@@ -1229,6 +1229,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
