--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -49,7 +49,7 @@
     </head>
 	<body>
         <div class="wrapper">
-			<div class="data" id="container-full-page">
+			<div class="data" id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
@@ -1202,6 +1202,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
