--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -81,9 +81,31 @@
 					            <p>We returned to a ransacked house, even the furniture was taken.<br> Your friend,
                                 <br>Orris</p>
 				            </header>
-					    </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
-                    <br class="clear">
+							<br class="clear">
+							<div id="content">
+                                <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                                <div id="leftcol">
+                                    <h3>Cottages, converted barns, caravans</h3>
+                                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
+									<br>The superb interior of one of our cottages
+                                </div>
+                                <nav><!--use the semantic tag <nav>-->
+                                    <ul><!--start of menu list-->
+                                        <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
+                                        </li><li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                                        <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                                        <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                                        <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                                    </ul><!--end of menu list-->
+                                </nav><!--</div> removed and replaced with </nav>-->
+                                <div id="midcol">
+                                   <h3>Situated in the UK's beautiful Devon countryside</h3>
+                                   <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
+                                </div>
+					        </div><!-- end-col-12 -->
+                        </div><!-- end-row -->
+                    
                     <!-- hero -->
                     <section id="hero" class="d-flex align-items-center scrolled-offset">
                         <div class="container position-relative aos-init aos-animate" data-aos="fade-up" data-aos-delay="500">
@@ -1175,6 +1197,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
