--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -103,8 +103,10 @@
                                    <h3>Situated in the UK's beautiful Devon countryside</h3>
                                    <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
                                 </div>
-					        </div><!-- end-col-12 -->
-                        </div><!-- end-row -->
+								<br class="clear">
+                            </div><!--content section closed-->
+					    </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
                     
                     <!-- hero -->
                     <section id="hero" class="d-flex align-items-center scrolled-offset">
@@ -1197,6 +1199,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
