--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -55,7 +55,7 @@
             }
             h3 { font-size:large; color:white; margin:0 0 6px 0;
             }
-            #leftcol { float:left; width: 310px; vertical-align:top;
+            #leftcol { float:left; width: 310px; vertical-align:bottom;
             }
             #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
             }
