--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -38,35 +38,35 @@
             header, footer, section, article, nav { display:block;
             }
             /*remove the # from #header*/
-            header { width: 920px; height: 180px; padding: 0; border: 10px white solid; 
+            header#html5-ch1-7header { width: 920px; height: 180px; padding: 0; border: 10px white solid; 
             background: url(images/header3.jpg); margin:10px auto;
             }
-            h1 { font-size:300%; color :white; position: relative; left:90px; top: 55px;
+            h1#html5-ch1-7h1{ font-size:300%; color :white; position: relative; left:90px; top: 55px;
             width:480px;
             }
             #rosette { position:relative; left:750px; top:5px;
             }
-            #content { background-color:transparent; border-left:10px white solid; 
+            ##html5-ch1-7content { background-color:transparent; border-left:10px white solid; 
             border-right:10px white solid; border-bottom:10px white solid; width: 904px; 
             margin-top:10px; margin-left:auto; margin-right:auto; padding:8px; 
             font-size:medium; color:maroon;
             }
-            h2 { font-size:x-large; color:white; margin:0 0 10px 0;
+            h2#html5-ch1-7h2 { font-size:x-large; color:white; margin:0 0 10px 0;
             }
             h3 { font-size:large; color:white; margin:0 0 6px 0;
             }
-            #leftcol { float:left; width: 310px; vertical-align:bottom;
+            #html5-ch1-7leftcol { float:left; width: 310px; vertical-align:bottom;
             }
-            #rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
+            #html5-ch1-7rightcol { width: 135px; float:right; height: 252px; margin-right:10px;
             }
             #midcol { margin-left:315px; margin-right:145px; margin-top:10px; 
             vertical-align:top;
             }
             /*set nav block position and width and remove the #menu item*/
-            nav ul { margin:10px 0 10px 0; width:135px; float:right;
+            nav#html5-ch1-7 ul { margin:10px 0 10px 0; width:135px; float:right;
             }
             /*Set un-ordered list style within the menu block only. This removes bullets*/
-            nav li { list-style-type:none;
+            nav#html5-ch1-7 li { list-style-type:none;
             }
             /* set general side button styles */
             li.btn { margin-bottom: 3px; text-align: center; width:130px;
@@ -88,7 +88,7 @@
             }
             br.clear { clear:both;
             }
-            #midcol img { margin-left:10px;
+            #html5-ch1-7midcol img { margin-left:10px;
             }
             /*change #footer to footer */
             footer { clear:both; color:maroon; text-align:center;
@@ -148,24 +148,24 @@
                                 <br>Orris</p>
 				            </header>
 							<br class="clear">
-							<div id="content">
-                                <h2>Award winning accommodation, self catering or bed and breakfast</h2>
-                                <div id="leftcol">
-                                    <h3>Cottages, converted barns, caravans</h3>
+							<div id="#html5-ch1-7content">
+                                <h2 id=#html5-ch1-7h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                                <div id="#html5-ch1-7leftcol">
+                                    <h3 id="#html5-ch1-7h3">Cottages, converted barns, caravans</h3>
                                     <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300">
 									<br>The superb interior of one of our cottages
                                 </div>
-                                <nav><!--use the semantic tag <nav>-->
+                                <nav#html5-ch1-7nav><!--use the semantic tag <nav>-->
                                     <ul><!--start of menu list-->
                                         <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
-                                        </li><li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>                   
+										<li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
                                         <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
                                         <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
                                         <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
                                     </ul><!--end of menu list-->
                                 </nav><!--</div> removed and replaced with </nav>-->
-                                <div id="midcol">
+                                <div id="#html5-ch1-7midcol">
                                    <h3>Situated in the UK's beautiful Devon countryside</h3>
                                    <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
                                 </div>
@@ -1265,6 +1265,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
