--- a/creating-a-website.html
+++ b/creating-a-website.html
@@ -14,8 +14,8 @@
         <meta name="keywords" content="HTML5, Node.js, Jquery">
         <meta name="author" content="Orris Baker">
 	    <meta property="og:audio:type" content="audio/mpeg"> 
-        <!-- Viewport for responsive web design 
-		<link rel="stylesheet" href="CSS/squaretabs.css"> -->
+        <!-- Viewport for responsive web design --> 
+		<link rel="stylesheet" href="CSS/squaretabs.css"> 
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
         <script type="text/javascript" src="js/scripts.js"></script>
@@ -1265,6 +1265,7 @@
   </a>
 </div>
 !-- End View in Browser -->
+
 
 
 
