--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -185,13 +185,14 @@
                                     <input class="trigger" type="checkbox" id="mainNavButton">
                                     <label for="mainNavButton" onclick>Menu</label>
                                     <ul>
-                                        <li><a href="./index.html">Home</a></li>
-                                        <li><a href="./about.html">About Us</a></li>
-                                        <li><a href="./membership.html">Membership</a></li>
-                                        <li><a href="./news.html">News</a></li>
-                                        <li><a href="./starter-page.html">Specials</a></li>
-						                <li><a href="./index[1].html">Blog</a></li>
-							            <li><a href="./index2.html">Products</a></li>
+                                        <li><a href="./index.html">chapter 1</a></li>
+                                        <li><a href="./about.html">chapter 2</a></li>
+                                        <li><a href="./membership.html">chapter 3</a></li>
+                                        <li><a href="./news.html">chapter 4</a></li>
+                                        <li><a href="./starter-page.html">chapter 5</a></li>
+						                <li><a href="./index[1].html">chapter 6</a></li>
+							            <li><a href="./index2.html">chapter 7</a></li>
+										<li><a href="./creating-a-website.html">chapter 8</a></li>
                                     </ul>
                                 </nav>
                             </div><!-- col-12 -->
