--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -196,11 +196,11 @@
                                 </nav>
                             </div><!-- col-12 -->
                         </div><!-- end-.row -->
-
+                        <!--
                         <div class="row">
                             <div class="çol-12">
                                 <img src="img/kite.png">
-								<!--
+								
 					                <div class="data" id="html5-ch1-7leftcol">
                                         <h3>Cottages, converted barns, caravans</h3>
                                         <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
@@ -763,7 +763,7 @@
                         <li><a href="#"><i class="instagram"></i></i></a></li>
                     </ul>
                     <p> &copy; Copyright 2025 MJ&#39;s Practical HTML5 Project&#39;s for Fun<span class="amp">&amp;</span>Profit - Productions</p>
-                </div><!-- end-footer -->
+                </div><!-- end-footer --
 		    </div><!-- end-container -->
 
             <!-- document ready -->
