--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -102,8 +102,13 @@
 			            </header>
 			        </div><!-- end-col-12 -->
                 </div><!-- end-row -->
+				<br>
 				<!--close top section - content area starts -->
-				
+				<div class="row">
+                    <div class="çol-12" padding="2%">
+                        <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                 <div class="data" id="html5-ch1-7leftcol">
                     <h3>Cottages, converted barns, caravans</h3>
                     <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
