--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -71,8 +71,8 @@
         <![endif]-->
     </head>
     <body>
-		<div class="data" id="wrapper">
-			<div id="container">
+		<div id="wrapper">
+			<div class="data" id="container">
 				<div class="row">
                     <div class="col-12">
                         <nav role="navigation" class="data" id="nav">
