--- a/index.html
+++ b/index.html
@@ -137,16 +137,19 @@
 					</div><!-- end-col-12 -->
                 </div><!-- end-row -->
                 <br class="clear">
-			                        
-                <div id="hnav">
-                    <ul>
-                        <li><a href="index.html">Home Page</a></li>
-                        <li><a class="active" href="page2.html">Page Two</a></li>
-                        <li><a href="page3.html">Page Three with a long label</a></li>
-                        <li><a href="page4.html">Page Four</a></li>
-                        <li><a href="page5.html">Page Five</a></li>
-                    </ul>
-                </div>				
+			    <div class="row">
+                    <div class="col-12">                    
+                        <div id="hnav">
+                            <ul>
+                                <li><a href="index.html">Home Page</a></li>
+                                <li><a class="active" href="page2.html">Page Two</a></li>
+                                <li><a href="page3.html">Page Three with a long label</a></li>
+                                <li><a href="page4.html">Page Four</a></li>
+                                <li><a href="page5.html">Page Five</a></li>
+                            </ul>
+                        </div>	
+					</div><!-- end-col-12 -->
+                </div><!-- end-row -->
                                     
 				<div data-role="content" class="data" id="html5-ch1-7content">
                     <b><p id="no-script">We recommend that you have JavaScript enabled!</p></b>
