--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -5,7 +5,7 @@
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
 		<!-- meta details go here -->
         <title>Test page-HTML5 expanded section example-ch1-7</title>
-		<meta charset=utf-8>
+		<meta charset="UTF-8">
 	    <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <meta name="google-adsense-account" content="ca-pub-9639638377144073">
 	    <meta property="og:title" content="A Basic HTML5 Template">
