--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -97,7 +97,7 @@
 				        <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				            <hgroup>  
 					            <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
-					            <h2 class="heading"><strong>StarTrackr!</strong></h2>
+					            <h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
 				            </hgroup>
 			            </header>
 			        </div><!-- end-col-12 -->
