--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -21,7 +21,8 @@
 		<link rel="stylesheet" href="CSS/squaretabs.css">
 	    <link rel="stylesheet" href="css-jq/base.css" type="text/css" media="screen" charset="utf-8">
         <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-        <script type="text/javascript" src="js/scripts.js"></script>
+        <script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
         <script type="text/javascript" src="jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 
@@ -63,6 +64,7 @@
         <script type=”text/javascript” src=”assets/js/ui.js”></script>
         <script type="text/javascript" src="js/jquery-1.7-min.js"></script>
         <script type="text/javascript" src="js/script.js"></script>
+		<script type="text/javascript" src="js/scripts.js"></script>
         <script src="https://use.fontawesome.com/c6d3fbeb1d.js"></script>
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>
         <!--Add conditional Javascript-->
@@ -775,7 +777,8 @@
             <!-- document ready -->
             <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
             <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
-            <script type="text/javascript" src="./scripts.js"></script>
+            <script type="text/javascript" src="js/script.js"></script>
+		    <script type="text/javascript" src="js/scripts.js"></script>
 			
             <script src="./lib/jquery-ui-1.8.17.custom.min.js" type="text/javascript" charset="utf-8"></script>
             <script type="text/javascript" src="./jquery.scrollTo.js" charset="utf-8"></script>
