--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -142,68 +142,68 @@
                     </header>
 			        -->
 		            <!-- assume chapter 1 before -->
-                    <section id="chapter2">
-                        <header>
-                            <h1>Chapter 2</h1>
-                        </header>
-			            <p>Intro to chapter 2 here...</p>
-                        <section id="newStrucreElements">
-                            <header>
-                                <h2>New Structural Elements</h2>
-                            </header>
-                            <h3>header Element</h3>
-                            <p>Discussion of header element.</p>
-                            <h3>footer Element</h3>
-                            <p>Discussion of footer element.</p>
-                            <h3>section Element</h3>
-                            <p>Discussion of section element</p>
-                        </section>
-                        <section id="newFormElements">
-                            <header>
-                                <h2>New Form Elements</h2>
-                            </header>
-                            <h3>input type=date</h3>
-                            <p>Discussion here...</p>
-                            <footer>
-                                <p>These ideas are from WebForms specification.</p>
-                            </footer>
-                        </section>
-                    </section>
-                    <section id="chapter3">
-                        <header>
-                            <h2>Chapter 3</h2>
-                        </header>
-                        <p>Massive element reference...</p>
-                    </section>
-                    <footer>
-                        <p>Content of this example is not under copyright</p>
-                    </footer>
-			        <img class="logo" src="img/flexy-logo.png">
-			        <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
-                        <div class="col-12">
-				            <h1 id="html5-ch1-7h1">StarTrackr!</h1>
-                        </div><!-- end-col-12 -->			
+                <section id="chapter2">
+                    <header>
+                        <h1>Chapter 2</h1>
                     </header>
+			        <p>Intro to chapter 2 here...</p>
+                    <section id="newStrucreElements">
+                        <header>
+                            <h2>New Structural Elements</h2>
+                        </header>
+                        <h3>header Element</h3>
+                        <p>Discussion of header element.</p>
+                        <h3>footer Element</h3>
+                        <p>Discussion of footer element.</p>
+                        <h3>section Element</h3>
+                        <p>Discussion of section element</p>
+                    </section>
+                    <section id="newFormElements">
+                        <header>
+                            <h2>New Form Elements</h2>
+                        </header>
+                        <h3>input type=date</h3>
+                        <p>Discussion here...</p>
+                        <footer>
+                            <p>These ideas are from WebForms specification.</p>
+                        </footer>
+                    </section>
+                </section>
+                <section id="chapter3">
+                    <header>
+                        <h2>Chapter 3</h2>
+                    </header>
+                    <p>Massive element reference...</p>
+                </section>
+                <footer>
+                    <p>Content of this example is not under copyright</p>
+                </footer>
+			    <img class="logo" src="img/flexy-logo.png">
+			    <header class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+                    <div class="col-12">
+				        <h1>StarTrackr!</h1>
+                    </div><!-- end-col-12 -->			
+                </header>
 			
-                        <h2>Practical HTML5 Projects for fun and Profit!</h2>
-                        <div class="row">
-                            <div class="col-12">
-                                <nav role="navigation" class="data" id="nav">
-                                    <input class="trigger" type="checkbox" id="mainNavButton">
-                                    <label for="mainNavButton" onclick>Menu</label>
-                                    <ul>
-                                        <li><a href="./index.html">chapter 1</a></li>
-                                        <li><a href="./about.html">chapter 2</a></li>
-                                        <li><a href="./membership.html">chapter 3</a></li>
-                                        <li><a href="./news.html">chapter 4</a></li>
-                                        <li><a href="./starter-page.html">chapter 5</a></li>
-						                <li><a href="./index[1].html">chapter 6</a></li>
-							            <li><a href="./index2.html">chapter 7</a></li>
-										<li><a href="./creating-a-website.html">chapter 8</a></li>
-                                    </ul>
-                                </nav>
-                            </div><!-- col-12 -->
-                        </div><!-- end-.row -->
+                <h2>Practical HTML5 Projects for fun and Profit!</h2>
+                <div class="row">
+                    <div class="col-12">
+                        <nav role="navigation" class="data" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">chapter 1</a></li>
+                                <li><a href="./about.html">chapter 2</a></li>
+                                <li><a href="./membership.html">chapter 3</a></li>
+                                <li><a href="./news.html">chapter 4</a></li>
+                                <li><a href="./starter-page.html">chapter 5</a></li>
+						        <li><a href="./index[1].html">chapter 6</a></li>
+							    <li><a href="./index2.html">chapter 7</a></li>
+								<li><a href="./creating-a-website.html">chapter 8</a></li>
+                            </ul>
+                        </nav>
+                    </div><!-- col-12 -->
+                </div><!-- end-.row -->
                         <!--
                         <div class="row">
                             <div class="çol-12">
