--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,19 +81,19 @@
 					    <h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
 				    </hgroup>
 			    </header>
-		     <!-- <header><div id="hdr"> changed to <header>
-                    <h1>Devon's Rural Retreats</h1>
-                </header>-  ->
-<!--close top section - content area starts -->
-<div id="content">
+		        <!-- <header><div id="hdr"> changed to <header>
+                        <h1>Devon's Rural Retreats</h1>
+                    </header>-  ->
+                    <!--close top section - content area starts -->
+                    <div id="content">
 <h2>Award winning accommodation, self catering or bed and breakfast</h2>
 <div id="leftcol">
 <h3>Cottages, converted barns, caravans</h3>
 <img alt="Cottage interior" title="Cottage interior" height="225"
 src="images/cotdining300.jpg" width="300"><br>The superb interior
 of one of our cottages
-</div></div><!-- 
-<nav><!--use the semantic tag <nav>-->
+</div>
+					</div><!-- <nav><!--use the semantic tag <nav>-->
 <ul><!--start of menu list-->
 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a>
@@ -784,7 +784,7 @@ height="229" width="398">
                         </div>
                     </div>
 
-                    <div class="row" style="background-color: 66d4ff">
+                   <!-- <div class="row" style="background-color: 66d4ff"> -->
                         <div class="col-12">
                             <h2>Fine Print</h2>
                             <p id="fine_print">
@@ -796,9 +796,8 @@ height="229" width="398">
                             </p>
                         </div>
                     
-                </div> <!-- end-content-->
-		</div><!-- end-.wrapper -->
-    </body>
+                </div> <!-- end-container -->
+		
                 <div id="footer">
                     <ul class="social">
                         <li><a href="#"><i class="fa fa-facebook"></i></i></a></li>
@@ -810,8 +809,7 @@ height="229" width="398">
                     <p> &copy; Copyright 2025 MJ&#39;s Practical HTML5 Project&#39;s for Fun<span class="amp">&amp;</span>Profit - Productions</p>
 	
                 </div><!-- end-footer -->
-		    </div><!-- end-container -->
-
+		    </div><!-- end-.wrapper -->
             <!-- document ready -->
             <link rel="stylesheet" href="./css-jq/base.css" type="text/css" media="screen" charset="utf-8" />
             <script src="./lib/jquery-1.7.1.min.js" type="text/javascript" charset="utf-8"></script>
@@ -824,10 +822,8 @@ height="229" width="398">
             <link rel="stylesheet" href="./css-jq/sunny/jquery-ui-1.8.17.custom.css" type="text/css" media="screen" charset="utf-8">
             <link rel="stylesheet" href="./splitter.css" type="text/css" media="screen" charset="utf-8">
             <script src="./jquery.easing.1.3.js"></script>
-            <script src="./js/bootstrap.bundle.js.map"></script>
-        
+            <script src="./js/bootstrap.bundle.js.map"></script>        
     </body>
-
 </html>
 
 <!-- View in Browser --       
