--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -91,79 +91,79 @@
                             <h3>Cottages, converted barns, caravans</h3>
                             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                         </div>
-					<!-- <nav><!--use the semantic tag <nav>-->
-                    <ul><!--start of menu list-->
-                        <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>                       
-						<li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
-                        <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
-                        <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
-                        <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
-                    </ul><!--end of menu list-->
-                </nav><!--</div> removed and replaced with </nav>-->
-                <div id="midcol">
-                    <h3>Situated in the UK's beautiful Devon countryside</h3>
-                    <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
-                </div>
-                <!-- 17CHAPTER 1 ■ MOVING TO HTML5 -->
-                <br class="clear">
-                </div>content section closed-->
-                <!--<div id=footer"> changed to <footer>-->
-                <footer><p>Footer goes here</p>
-                </footer>
+					    <nav><!--use the semantic tag <nav>-->
+                            <ul><!--start of menu list-->
+                                <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                                <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>                       
+						        <li class="btn"><a href="faqs.html" title="Frequently Asked Questions">Information</a></li>
+                                <li class="btn"><a href="attractions.html" title="Local attractions">Attractions</a></li>
+                                <li class="btn"><a href="contact.html" title="Contact us">Contact Us</a></li>
+                                <li class="btn"><a href="index.html" title="Return to Home Page">Home Page</a></li>
+                            </ul><!--end of menu list-->
+                        </nav><!--</div> removed and replaced with </nav>-->
+                        <div id="midcol">
+                            <h3>Situated in the UK's beautiful Devon countryside</h3>
+                            <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
+                        </div>
+                        <!-- 17CHAPTER 1 ■ MOVING TO HTML5 -->
+                        <br class="clear">
+                    </div>content section closed-->
+                    <!-- <div id=footer"> changed to <footer>-->
+                    <footer><p>Footer goes here</p>
+                    </footer>
 	
-				<div class="row">
-                    <div class="col-12">
-                        <nav role="navigation" class="data" id="nav">
-                            <input class="trigger" type="checkbox" id="mainNavButton">
-                            <label for="mainNavButton" onclick>Menu</label>
-                            <ul>
-                                <li><a href="./index.html">Home</a></li>
-                                <li><a href="./about.html">About Us</a></li>
-                                <li><a href="./membership.html">Membership</a></li>
-                                <li><a href="./news.html">News</a></li>
-                                <li><a href="./starter-page.html">Specials</a></li>
-					            <li><a href="./index[1].html">Blog</a></li>
-					            <li><a href="./index2.html">Products</a></li>
-								<li><a href="./creating-a-website.html">Create-a-website</a></li>
-                            </ul>
-                        </nav>
-						<img class="logo" src="img/flexy-logo.png">
-				    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-			    <div class="row">
-                    <div class="col-12">        
+				    <div class="row">
+                        <div class="col-12">
+                            <nav role="navigation" class="data" id="nav">
+                                <input class="trigger" type="checkbox" id="mainNavButton">
+                                <label for="mainNavButton" onclick>Menu</label>
+                                <ul>
+                                   <li><a href="./index.html">Home</a></li>
+                                   <li><a href="./about.html">About Us</a></li>
+                                   <li><a href="./membership.html">Membership</a></li>
+                                   <li><a href="./news.html">News</a></li>
+                                   <li><a href="./starter-page.html">Specials</a></li>
+					               <li><a href="./index[1].html">Blog</a></li>
+					               <li><a href="./index2.html">Products</a></li>
+								   <li><a href="./creating-a-website.html">Create-a-website</a></li>
+                                </ul>
+                            </nav>
+						    <img class="logo" src="img/flexy-logo.png">
+				        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+			        <div class="row">
+                        <div class="col-12">        
 				        
-			        </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-				<br>
-				<!--close top section - content area starts -->
-				<div class="row">
-                    <div class="çol-12" padding="2%">
-                        <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
-                    </div><!-- end-col-12 -->
-                </div><!-- end-row -->
-                <div class="data" id="html5-ch1-7leftcol">
-                    <h3>Cottages, converted barns, caravans</h3>
-                    <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
-                    <br>The superb interior of one of our cottages
-                </div>
+			            </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+				    <br>
+				    <!--close top section - content area starts -->
+				    <div class="row">
+                        <div class="çol-12" padding="2%">
+                            <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
+                        </div><!-- end-col-12 -->
+                    </div><!-- end-row -->
+                    <div class="data" id="html5-ch1-7leftcol">
+                        <h3>Cottages, converted barns, caravans</h3>
+                        <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300">
+                        <br>The superb interior of one of our cottages
+                    </div>
 
-                <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
-                    <ul><!--start of menu list-->
-                        <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
-                        <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
-                        <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
-                        <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
-                        <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
-                    </ul><!--end of menu list-->
-                </nav>
+                    <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
+                        <ul><!--start of menu list-->
+                            <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
+                            <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>
+                            <li class="btn"><a href="index[1].html" title="Frequently Asked Questions">Information</a></li>
+                            <li class="btn"><a href="starter-page.html" title="Local attractions">Attractions</a></li>
+                            <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
+                        </ul><!--end of menu list-->
+                    </nav>
 
-                <!--</div> removed and replaced with </nav>-->
-                <div class="data" id="html5-ch1-7midcol">
-                    <h3>Situated in the BDA's beautiful countryside</h3>
-                    <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
-                </div>
+                    <!--</div> removed and replaced with </nav>-->
+                    <div class="data" id="html5-ch1-7midcol">
+                        <h3>Situated in the BDA's beautiful countryside</h3>
+                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                    </div>
                     
 			        <!--
                     <header>
