--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,14 +81,15 @@
 					    <h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
 				    </hgroup>
 			    </header>
+				<br class="clear">
 		        <!-- <header><div id="hdr"> changed to <header>
                         <h1>Devon's Rural Retreats</h1>
                     </header>-  ->
                     <!--close top section - content area starts -->
                     <div id="content">
-                        <h2>Award winning accommodation, self catering or bed and breakfast</h2>
+                        <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                         <div id="leftcol">
-                            <h3>Cottages, converted barns, caravans</h3>
+                            <h3>Cottages, converted barns, caravans</h3><br class="clear">
                             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                         </div>
 					    <nav><!--use the semantic tag <nav>-->
