--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -92,7 +92,7 @@
                             <h3>Cottages, converted barns, caravans</h3><br class="clear">
                             <img alt="Cottage interior" title="Cottage interior" height="225" src="images/cotdining300.jpg" width="300"><br>The superb interior of one of our cottages
                         </div>
-					    <nav><!--use the semantic tag <nav>-->
+					    <nav class="data" id="html5-ch1-7nav"><!--use the semantic tag <nav>-->
                             <ul><!--start of menu list-->
                                 <li class="btn"> <a href="accommodation.html" title="Accommodation">Accommodation</a></li>
                                 <li class="btn"><a href="maps.html" title="Location Maps">Maps</a></li>                       
@@ -106,9 +106,11 @@
                             <h3>Situated in the UK's beautiful Devon countryside</h3>
                             <img title="Devon countryside" alt="Devon countryside" src="images/devon398.jpg" height="229" width="398">
                         </div>
+						
                         <!-- 17CHAPTER 1 ■ MOVING TO HTML5 -->
-                        <br class="clear">
+                        
                     </div>content section closed-->
+				    <br class="clear">
                     <!-- <div id=footer"> changed to <footer>-->
                     <footer><p>Footer goes here</p>
                     </footer>
