--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -80,10 +80,10 @@
 					    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
 					    <br class="clear">
 						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
-						<br class="clear">
+						
 				    </hgroup>
 			    </header>
-	
+	            <br class="clear"><br class="clear"><br class="clear">
 		        <!-- <header><div id="hdr"> changed to <header>
                         <h1>Devon's Rural Retreats</h1>
                     </header>-  ->
