--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -81,7 +81,7 @@
 						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
 				    </hgroup>
 			    </header>
-	            <br class="clear"><br class="clear"><br class="clear">
+	            <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
 		        <!-- <header><div id="hdr"> changed to <header>
                         <h1>Devon's Rural Retreats</h1>
                     </header>-  ->
