--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -76,30 +76,30 @@
 		<div id="wrapper">
 			<div class="data" id="container">
 				<div class="row">
-                        <div class="col-12">
-                            <nav role="navigation" class="data" id="nav">
-                                <input class="trigger" type="checkbox" id="mainNavButton">
-                                <label for="mainNavButton" onclick>Menu</label>
-                                <ul>
-                                   <li><a href="./index.html">Home</a></li>
-                                   <li><a href="./about.html">About Us</a></li>
-                                   <li><a href="./membership.html">Membership</a></li>
-                                   <li><a href="./news.html">News</a></li>
-                                   <li><a href="./starter-page.html">Specials</a></li>
-					               <li><a href="./index[1].html">Blog</a></li>
-					               <li><a href="./index2.html">Products</a></li>
-								   <li><a href="./creating-a-website.html">Create-a-website</a></li>
-                                </ul>
-                            </nav>
-						    <img class="logo" src="img/flexy-logo.png">
-				        </div><!-- end-col-12 -->
-                    </div><!-- end-row -->
-				    <header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
+                    <div class="col-12">
+                        <nav role="navigation" class="data" id="nav">
+                            <input class="trigger" type="checkbox" id="mainNavButton">
+                            <label for="mainNavButton" onclick>Menu</label>
+                            <ul>
+                                <li><a href="./index.html">Home</a></li>
+                                <li><a href="./about.html">About Us</a></li>
+                                <li><a href="./membership.html">Membership</a></li>
+                                <li><a href="./news.html">News</a></li>
+                                <li><a href="./starter-page.html">Specials</a></li>
+					            <li><a href="./index[1].html">Blog</a></li>
+					            <li><a href="./index2.html">Products</a></li>
+								<li><a href="./creating-a-website.html">Create-a-website</a></li>
+                            </ul>
+                        </nav>
+						<img class="logo" src="img/flexy-logo.png">
+				    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				<header data-role="header" class="data" id="html5-ch1-7header"><!-- <div id="hdr"> changed to <header> -->
 				    <hgroup>  
 					    <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
-						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2">
+						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2"</h2>
 				    </hgroup>
-			        </header>
+			    </header>
 	            <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
 		        <!-- <header><div id="hdr"> changed to <header>
                         <h1>Devon's Rural Retreats</h1>
