--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -128,7 +128,7 @@
                         <img title="Devon countryside" alt="Devon countryside" src="images/bda2.gif" height="229" width="398">
                     </div>					
                     <!-- 17CHAPTER 1 ■ MOVING TO HTML5 -->     
-                </div>content section closed-->
+                </div><!-- content section closed-->
 				<br class="clear">
                 <!-- <div id=footer"> changed to <footer>-->
                 <footer class="data" id="html5style2footer"> 
