--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -123,10 +123,11 @@
                             <li class="btn"><a href="HTML5-Ch1-7.html" title="Return to Home Page">Home Page</a></li>
                         </ul><!--end of menu list-->
                     </nav><!--</div> removed and replaced with </nav>-->
-                    <div id="midcol">
-                        <h3>Situated in the UK's beautiful Devon countryside</h3>
-                        <img title="Devon countryside" alt="Devon countryside" src="images/bda2.gif" height="229" width="398">
-                    </div>					
+                    </div> removed and replaced with </nav>--
+                    <div class="data" id="html5-ch1-7midcol">
+                        <h3>Situated in the BDA's beautiful countryside</h3>
+                        <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
+                    </div>				
                     <!-- 17CHAPTER 1 ■ MOVING TO HTML5 -->     
                 </div><!-- content section closed-->
 				<br class="clear">
