--- a/index.html
+++ b/index.html
@@ -31,8 +31,8 @@
         <script type="text/javascript" src="./jquery.easing.1.3.js"></script>
         <script type="text/javascript" src="jquery.scrollTo.js" charset="utf-8"></script>
 	    <link rel="stylesheet" href="style.css"> 
-        <link rel="stylesheet" href="style[1].css"> 
-       <!-- <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
+     <!--   <link rel="stylesheet" href="style[1].css"> 
+        <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
 	    <link rel="stylesheet" href="nav[1].css">
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
@@ -114,7 +114,6 @@
 					    <img class="logo" src="./img/flexy-logo.png">
 				    </div><!-- end-col-12 -->
                 </div><!-- end-row -->
-				<br class="clear">
 				
 				<div class="row">
                     <div class="col-12">
