--- a/index.html
+++ b/index.html
@@ -155,8 +155,7 @@
                         <div class="col-12" style="padding: 2%;">
                             <div id="banner">
                                 <div id="banner-wrapper">
-                                    <h2 class="dark" id="html5-ch1-7h2"> </h2> 
-							        <!-- <p id="no-script">Award winning accommodation, self catering or bed and breakfast</p> --> 
+                                    <h2 class="heading"><strong>Award winning accommodation, self catering or bed and breakfast</strong></h2> 
                                 </div>
 					        </div>
 				        </div>
