--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -73,7 +73,7 @@
         <![endif]-->
     </head>
     <body>
-		<div id="wrapper">
+		<div class="wrapper">
 			<div class="data" id="container">
 				<div class="row">
                     <div class="col-12">
