--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -1,5 +1,5 @@
 <!-- Listing 1-7a. The new HTML5 listing (HTML5-Ch1-7.html) -->
-<!DOCTYPE html>
+<!doctype html>
 <html ng-app lang="en">
     <head profile="http://www.w3.org/2005/10/profile">
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8">
