--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -103,8 +103,7 @@
 	            <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
                     <!--close top section - content area starts -->
                 <div id="content">
-                    <h2>Award winning accommodation, self catering or bed and breakfast
-					</h2><br class="clear">
+                    <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     <div id="leftcol">
                         <h3>Cottages, converted barns, caravans</h3><br class="clear">
 						<br class="clear">
