--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -105,7 +105,7 @@
                 <div id="content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
-					<div id="leftcol">
+					<div id="html5-ch1-7leftcol">
                         <h3>Cottages, converted barns, caravans</h3><br class="clear">
 						<br class="clear">
                         <img alt="Cottage interior" title="Cottage interior" height="225" src="images/bda2.jpg" width="300"><br>The superb interior of one of our cottages
