--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -102,7 +102,7 @@
 			    </header>
 	            <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
                     <!--close top section - content area starts -->
-                <div id="content">
+                <div id="html5-ch1-7content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
 					<div id="html5-ch1-7leftcol">
