--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -105,6 +105,7 @@
                 <div id="html5-ch1-7content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
+					<br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
 					<div id="html5-ch1-7leftcol">
                         <h3>Cottages, converted barns, caravans</h3><br class="clear">
 						<br class="clear">
