--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -100,9 +100,9 @@
 						<h2 class="heading"><strong>StarTrackr!</strong id="html5-ch1-7h2"</h2>
 				    </hgroup>
 			    </header>
-	            <br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear"><br class="clear">
+	            
                     <!--close top section - content area starts -->
-                <div id="content">
+                <div id="html5-ch1-7content">
                     <h2>Award winning accommodation, self catering or bed and breakfast</h2><br class="clear">
                     
 					<div id="html5-ch1-7leftcol">
