--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -398,7 +398,8 @@
 		            <!-- assume chapter 1 before -->
                 <section id="chapter2">
                     <header>
-                        <h1>Chapter 2</h1>
+                        <h1>A full page roll-over gallery of greetings cards</h1>
+                        <h2>Hover the mouse over a small picture to see an enlarged version</h2>
                     </header>
 			        <p>Intro to chapter 2 here...</p>
                     <section id="newStrucreElements">
