--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -98,9 +98,15 @@
                     </header> 
 				</div><!-- end-col-12 -->
 				<!--close top section - content area starts -->
+				<div class="row">
+                    <div class="çol-12" padding="2%">
+                        <h2 class="dark" id="html5-ch1-7h2"> Award winning accommodation, self catering or bed and breakfast</h2>
+                    </div><!-- end-col-12 -->
+                </div><!-- end-row -->
+				<!--close top section - content area starts --
                 <div id="html5-ch1-7content">
                    <h2>Award winning accommodation, self catering or bed and breakfast</h2> 
-
+                 -->
 				<div class="row">
                     <div class="çol-12">
 				        <div class="data" id="html5-ch1-7leftcol">
@@ -397,7 +403,8 @@
                     </header>
 			        -->
 		            <!-- assume chapter 1 before -->
-                <section id="chapter2">
+                <section id="gallery-page-
+validated">
                     <header>
                         <h1>A full page roll-over gallery of greetings cards</h1>
                         <h2>Hover the mouse over a small picture to see an enlarged version</h2>
