--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -85,7 +85,9 @@
                                 <li><a href="creatingawebsite.html">Contact</a></li>
 						        <li><a href="HTML5-Ch1-7.html">About Us</a></li>
                             </ul>
-                        </nav><br class="clear"><br class="clear"><br class="clear">
+                        </nav>
+						<br class="clear"><br class="clear"><br class="clear">
+						
 						<img class="logo" src="./img/flexy-logo.png">
                     </div><!-- end .col-12 -->
                 </div><!-- end-.row -->
@@ -99,6 +101,7 @@
                         </header> 
 				    </div><!-- end-col-12 -->
 				</div><!-- end-.row -->
+				<br class="clear"><br class="clear"><br class="clear">
 				<!--close top section - content area starts -->
 				<div class="row">
                     <div class="çol-12" padding="2%">
