--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -106,7 +106,7 @@
                 <div class="çol-12" padding="2%">
 					<div class="data" id="html5-style-2content">
                         <h2 class="dark"> Award winning accommodation, self catering or bed and breakfast</h2>
-                    </div><!-- end-col-12 -->
+                <!--    </div> end-col-12 --
                 </div><!-- end-row -->
 				
 				<div class="row">
@@ -133,6 +133,8 @@
                     <h3>Situated in the BDA's beautiful countryside</h3>
                     <img title="Devon countryside" alt="Devon countryside" src="images/bda.gif" height="229" width="398">
                 </div>
+				 </div><!-- end-col-12 -->
+                </div><!-- end-row -->
                          
             </div><!-- content section closed-->
 			<br class="clear">
