--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -98,7 +98,8 @@
 						<hgroup>  
 					        <h1 class="veryimportant heading stuff" id="html5-ch1-7h1">Practical HTML5 Projects for fun and Profit!</h1>
 					        <h2 class="heading" id="html5-style-2"><strong>StarTrackr!</strong> </h2>
-			            </hgroup>   
+			            </hgroup>
+						<img id="rosette" alt="Rosette" title="Rosette" height="127" src="images/rosette-128.png" width="128">
                     </header> 
 			    </div><!-- end-col-12 -->
 			</div><!-- end-.row -->
