--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -373,7 +373,7 @@
                         </ul>
                     </nav>
                     <div class="data" id="gallerypagerightcol">
-                        Secondary information<br><br>
+                        Startrackr<br><br>
                         <p><a href="http://validator.w3.org/check?uri=referer">
                             <img src="http://www.w3.org/html/logo/img/mark-word-icon.png" width="64" height="64" alt="Validated HTML5" title="Validated HTML5"></a>
                         </p>
@@ -385,18 +385,18 @@
                         <p class="advert">Web Design by Orris Baker</p>
 					</div>
                     <div class="data" id="gallerypagemidcol">
-                        <div id="gallery-block">
-                            <ul id="col-1">
+                        <div id="gallerypagegallery-block">
+                            <ul id="gallerypagecol-1">
                                 <li><a href="#"><img src="images/alithumb.jpg" alt="Ali" title="Ali"><img class="hid" src="images/alibig.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/catthumb.jpg" alt="Cat" title="Cat"><img class="hid" src="images/catbig.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/beachthumb.jpg" alt="Beach" title="Beach"><img class="hid" src="images/beachbig.jpg" alt=""></a></li>
                             </ul>
-							<ul id="col-2">
+							<ul id="gallerypagecol-2">
                                 <li><a href="#"><img src="images/fernsthumb.jpg" alt="Ferns" title="Ferns"><img class="hid" src="images/fernsbig.jpg" alt=""></a></li>
 								<li><a href="#"><img src="images/nicothumb.jpg" alt="Nico" title="Nico"><img class="hid" src="images/nicobig.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/childbeachthumb.jpg" alt="Child and Beach" title="Child and Beach"><img class="hid" src="images/childbeachbig.jpg" alt=""></a></li>
                             </ul>
-                            <ul id="col-3">
+                            <ul id="gallerypagecol-3">
 								<li><a href="#"><img src="images/ancientthumb.jpg" alt="Ancient and modern" title="Ancient and Modern"><img class="hid" src="images/ancientbig.jpg" alt=""></a></li>
 								<li><a href="#"><img src="images/felixthumb.jpg" alt="Felix" title="Felix"><img class="hid" src="images/felixbig.jpg" alt=""></a></li>
                                 <li><a href="#"><img src="images/cliffthumb.jpg" alt="Cliffs" title="Cliffs"><img class="hid" src="images/cliffbig.jpg" alt=""></a></li>
@@ -404,7 +404,7 @@
                             </ul><br class="clear">
                         </div><!--gallery block closed-->
                     </div><!--midcol closed-->
-                    <footer>
+                    <footer#gallerypagefooter>
                         Footer goes here
                     </footer>
                     <section id="newStrucreElements">
