--- a/HTML5-Ch1-7.html
+++ b/HTML5-Ch1-7.html
@@ -37,7 +37,20 @@
 		<link rel="stylesheet" href="../CSS/gallery-3col-mix.css">
 		<link rel="stylesheet" href="../CSS/gallery-one-col.css">
 		<link rel="stylesheet" href="../CSS/gallery-page-HTML5.css">
-		<link rel="stylesheet" href="../CSS/starter-page-style.css">
+		<link rel="stylesheet" href="../CSS/gallery-ie7.css">
+
+		<link rel="stylesheet" href="../CSS/bullets.css">
+		<link rel="stylesheet" href="../CSS/grad-pic-html5.css">
+		<link rel="stylesheet" href="../CSS/grad-pic-text-HTML5.css">
+		<link rel="stylesheet" href="../CSS/gradient-style-HTML5.css">
+		<link rel="stylesheet" href="../CSS/gradient-style.css">
+		<link rel="stylesheet" href="../CSS/liquid.css">
+		<link rel="stylesheet" href="../CSS/multiple-css2.css">
+		<link rel="stylesheet" href="../CSS/multiple-css3.css">
+		<link rel="stylesheet" href="../CSS/rosette.css">
+		<link rel="stylesheet" href="../CSS/squares-html5.css">
+		<link rel="stylesheet" href="../CSS/transparent.css">
+		<link rel="stylesheet" href="../CSS/gradient-pic.css">
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/5.0.0/normalize.min.css">
