--- a/index.html
+++ b/index.html
@@ -71,6 +71,11 @@
         <script async src="https://pagead2.googlesyndication.com/pagead/js/adsbygoogle.js?client=ca-pub-9639638377144073" crossorigin="anonymous"></script>  
         
 		<!--Add conditional Javascript-->
+		<script src="AC_RunActiveContent.js"></script>
+		<script src="jquery-1.12.0.min.js"></script>
+		<script src="jquery-1.12.0.min.js"></script>
+		<script src="jquery-1.12.0.min.js"></script>
+		<script src="jquery-1.12.0.min.js"></script>
 
 		<script src="jquery-1.12.0.min.js"></script>
 		<script src="jquery-1.7.1.min.js"></script>
