--- a/index.html
+++ b/index.html
@@ -35,6 +35,14 @@
         <link rel="stylesheet" type="text/css" href="./CSS/HTML5-style-2.css"> -->
 	    <link rel="stylesheet" href="nav[1].css">
 		<link rel="stylesheet" href="aos.css">
+		<link rel="stylesheet" href="bootstrap-icons.css">
+		<link rel="stylesheet" href="bootstrap.min.css">
+		<link rel="stylesheet" href="boxicons.min.css">
+		<link rel="stylesheet" href="churches-style1.css">
+		<link rel="stylesheet" href="boxicons.min.css">
+		<link rel="stylesheet" href="boxicons.min.css">
+		<link rel="stylesheet" href="boxicons.min.css">
+		<link rel="stylesheet" href="boxicons.min.css">
 
 		
         <link rel="stylesheet" href="https://m.w3newbie.com/youtube.css">
@@ -77,8 +85,8 @@
 		<script src="AC_RunActiveContent.js"></script>
 		<script src="analytics.js"></script>
 		<script src="aos.js"></script>
-		<script src="jquery-1.12.0.min.js"></script>
-		<script src="jquery-1.12.0.min.js"></script>
+		<script src="bootstrap.bundle.min.js"></script>
+		<script src="coolmenu.js"></script>
 
 		<script src="jquery-1.12.0.min.js"></script>
 		<script src="jquery-1.7.1.min.js"></script>
